syntax = "proto3";

package order;


option go_package = "proto/order;orderpb";

service OrderService{
    rpc ConfirmOrder (OrderConfirmRequest) returns (ConfirmOrderResponse);
}

message OrderConfirmRequest{
    uint64 order_id = 1;
    uint64 user_id  = 2;
    uint64 sku_id = 3;
    int64 total_price = 4;
    string status = 5;
    string phone_number = 6;
    int64 cash_back_value = 7;
}

message ConfirmOrderResponse {
    bool success = 1;
    string error = 2;
}